fixed overlapping issue with body and header

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,8 @@
 
 body {
     background: #fff;
-    color:rgba(14, 1, 1, 0.96)
+    color:rgba(14, 1, 1, 0.96);
+    padding-top: 80px;
 }
 /* ----------------------------------------------navbar and logo */
 .header {
@@ -93,10 +94,11 @@ body {
 }
 /* ---------------------------------------------------------home */
 .home{
-    height: 100vh;
+    height: 40vh;
     display: flex;
     align-items: center;
     padding: 0 10%;
+    min-height: calc(100vh - 100px);
 }
 
 .home-content {
